change html style

--- a/html/register.html
+++ b/html/register.html
@@ -41,7 +41,7 @@
       </div>
 
       <div id="u13_text" class="text ">
-        <p><span style="text-decoration:none;cursor:pointer" onclick="doPost('register')">注册账号</span></p>
+        <p><span style="text-decoration:none;cursor:pointer;color:blue" onclick="doPost('register')">注册账号</span></p>
       </div>
 
     </div>
