change post url

--- a/html/register.html
+++ b/html/register.html
@@ -23,25 +23,26 @@
         }
     </script>
   </head>
+  
   <body>
-    <div id="base" class="">
+    <div>
 
-      <div id="u8_text">
+      <div>
         <p><span style="text-decoration:none;">注册新账号</span></p>
       </div>
 
-      <div id="u9_text">
+      <div>
         <p><span style="text-decoration:none;">用户名：</span></p>
         <input id="u11_input" type="text" value="" class="u11_input"/>
       </div>
 
-      <div id="u10_text">
+      <div>
         <p><span style="text-decoration:none;">密码：</span></p>
         <input id="u12_input" type="password" value="" class="u12_input"/>
       </div>
 
-      <div id="u13_text" class="text ">
-        <p><span style="text-decoration:none;cursor:pointer;color:blue" onclick="doPost('register.html')">注册账号</span></p>
+      <div>
+        <p><span style="text-decoration:none;cursor:pointer;color:blue" onclick="doPost('register')">注册账号</span></p>
       </div>
 
     </div>
