add newline before the end of file

--- a/html/login.html
+++ b/html/login.html
@@ -34,41 +34,20 @@
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u2" class="ax_default label">
-        <div id="u2_div" class=""></div>
-        <div id="u2_text" class="text ">
-          <p><span style="text-decoration:none;">用户名：</span></p>
-        </div>
+      <div>
+        <p><span style="text-decoration:none;">用户名：</span></p>
+        <input id="u11_input" type="text" value="" class="u11_input"/>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u3" class="ax_default label">
-        <div id="u3_div" class=""></div>
-        <div id="u3_text" class="text ">
-          <p><span style="text-decoration:none;">密码：</span></p>
-        </div>
+      <div>
+        <p><span style="text-decoration:none;">密码：</span></p>
+        <input id="u12_input" type="password" value="" class="u12_input"/>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u4" class="ax_default label">
-        <div id="u4_div" class=""></div>
-        <div id="u4_text" class="text ">
+      <div>
           <p><span style="text-decoration:none;">没有账户？</span><a id="u5" class="link"><span style="text-decoration:none;color:#0000FF;" onclick="location='register'">注册</span></a><span style="text-decoration:none;">一个</span></p>
-        </div>
       </div>
 
-      <!-- Unnamed (文本框) -->
-      <div id="u6" class="ax_default text_field">
-        <div id="u6_div" class=""></div>
-        <input id="u6_input" type="text" value="" class="u6_input"/>
-      </div>
-
-      <!-- 密码输入框 (文本框) -->
-      <div id="u7" class="ax_default text_field" data-label="密码输入框">
-        <div id="u7_div" class=""></div>
-        <input id="u7_input" type="password" value="" class="u7_input"/>
-      </div>
     </div>
   </body>
 </html>
