--- a/html/roomlist.html
+++ b/html/roomlist.html
@@ -28,9 +28,7 @@
   <body>
     <input type="hidden" value="%s" id="name"/>
     <input type="hidden" value="%s" id="password"/>
-    You are in room %s
-    <div>
-      <p><span style="text-decoration:none;cursor:pointer;color:blue" onclick="doPost('exit')">exit</span></p>
-    </div>
+    roomlist: 
+    %s
   </body>
 </html>
