--- a/html/register.html
+++ b/html/register.html
@@ -6,7 +6,7 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script>
         function doPost(URL) {
-            PARAMS = {'UID' : $("#u11_input").val(), 'password' : $("#u12_input").val()};
+            PARAMS = {'name' : $("#name").val(), 'password' : $("#password").val()};
             var temp = document.createElement("form");
             temp.action = URL;
             temp.method = "post";
@@ -33,16 +33,20 @@
 
       <div>
         <p><span style="text-decoration:none;">用户名：</span></p>
-        <input id="u11_input" type="text" value="" class="u11_input"/>
+        <input id="name" type="text" value=""/>
       </div>
 
       <div>
         <p><span style="text-decoration:none;">密码：</span></p>
-        <input id="u12_input" type="password" value="" class="u12_input"/>
+        <input id="password" type="password" value=""/>
       </div>
 
       <div>
         <p><span style="text-decoration:none;cursor:pointer;color:blue" onclick="doPost('register')">注册账号</span></p>
+      </div>
+
+      <div>
+        <p><span style="text-decoration:none;">已有账户？</span><a class="link"><span style="text-decoration:none;color:#0000FF;" onclick="location='login'">点击登陆</span></a><span style="text-decoration:none;"></span></p>
       </div>
 
     </div>
