modify html files

--- a/html/error.html
+++ b/html/error.html
@@ -1,10 +1,11 @@
 <html>
-    <head>
-        <title>
-            Error
-        </title>
-    </head>
-    <body>
-        %s
-    </body>
+  <head>
+    <title>
+      Error
+      <meta http-equiv="refresh" content="5";url="%s">
+    </title>
+  </head>
+  <body>
+    %s
+  </body>
 </html>
