--- a/html/roomlist.html
+++ b/html/roomlist.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>%s</title>
+    <title>roomlist</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script>
       function doPost(URL) {
         PARAMS = {'name' : $("#name").val(),
-                  'password' : $("#password").val()};
+                  'password' : $("#password").val(),
+                  'roomname' : $("#roomname").val};
         var temp = document.createElement("form");
         temp.action = URL;
         temp.method = "post";
@@ -30,5 +31,18 @@
     <input type="hidden" value="%s" id="password"/>
     roomlist: 
     %s
+    <div>
+      创建新房间
+    </div>
+    
+    <div>
+      <p><span style="text-decoration:none;">房间名</span></p>
+      <input id="roomname" type="" value=""/>
+    </div>
+
+    <div>
+      <p><span style="text-decoration:none;cursor:pointer;color:blue" onclick="doPost('create')">创建</span></p>
+    </div>
+
   </body>
 </html>
