--- a/html/login.html
+++ b/html/login.html
@@ -27,10 +27,10 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u0" class="ax_default primary_button" onclick="doPost('login')">
+      <div id="u0">
         <div id="u0_div" class=""></div>
         <div id="u0_text" class="text ">
-          <p><span style="text-decoration:none;cursor:pointer">登录</span></p>
+          <p><span style="text-decoration:none;cursor:pointer">输入账号密码</span></p>
         </div>
       </div>
 
@@ -42,6 +42,10 @@
       <div>
         <p><span style="text-decoration:none;">密码：</span></p>
         <input id="password" type="password" value=""/>
+      </div>
+
+      <div>
+        <p><span style="text-decoration:none;cursor:pointer;color:blue" onclick="doPost('login')">登陆</span></p>
       </div>
 
       <div>
