--- a/html/roomlist.html
+++ b/html/roomlist.html
@@ -8,7 +8,7 @@
       function doPost(URL) {
         PARAMS = {'name' : $("#name").val(),
                   'password' : $("#password").val(),
-                  'roomname' : $("#roomname").val};
+                  'roomname' : $("#roomname").val()};
         var temp = document.createElement("form");
         temp.action = URL;
         temp.method = "post";
