--- a/html/error.html
+++ b/html/error.html
@@ -2,8 +2,8 @@
   <head>
     <title>
       Error
-      <meta http-equiv="refresh" content="5";url="%s">
     </title>
+    <meta http-equiv="refresh" content="5;url=%s">
   </head>
   <body>
     %s
