change pointer style

--- a/html/login.html
+++ b/html/login.html
@@ -49,7 +49,7 @@
       </div>
 
       <div>
-        <p><span style="text-decoration:none;">没有账户？</span><a><span style="text-decoration:none;color:#0000FF;" onclick="location='register'">注册</span></a><span style="text-decoration:none;">一个</span></p>
+        <p><span style="text-decoration:none;">没有账户？</span><a><span style="text-decoration:none;cursor:pointer;color:#0000FF;" onclick="location='register'">注册</span></a><span style="text-decoration:none;">一个</span></p>
       </div>
 
     </div>
