--- a/html/register.html
+++ b/html/register.html
@@ -46,7 +46,7 @@
       </div>
 
       <div>
-        <p><span style="text-decoration:none;">已有账户？</span><a class="link"><span style="text-decoration:none;color:#0000FF;" onclick="location='login'">点击登陆</span></a><span style="text-decoration:none;"></span></p>
+        <p><span style="text-decoration:none;">已有账户？</span><a class="link"><span style="text-decoration:none;cursor:pointer;color:#0000FF;" onclick="location='login'">点击登陆</span></a><span style="text-decoration:none;"></span></p>
       </div>
 
     </div>
