fix html jump path

--- a/html/success.html
+++ b/html/success.html
@@ -3,7 +3,7 @@
     <title>
       Success
     </title>
-    <meta http-equiv="refresh" content="5;url=%s">
+    <meta http-equiv="refresh" content="5;url=http://9.134.237.210:8000/%s">
   </head>
   <body>
     %s
