--- a/html/success.html
+++ b/html/success.html
@@ -1,12 +1,15 @@
 <html>
-  <head>
-    <title>
-      Success
-    </title>
-    <meta http-equiv="refresh" content="5;url=http://127.0.0.1:8000/%s">
-  </head>
-  <body>
-    %s
-    This page will be automatically reload in 5 seconds
-  </body>
+
+<head>
+  <title>
+    Success
+  </title>
+  <meta http-equiv="refresh" content="5;url=/%s">
+</head>
+
+<body>
+  %s
+  This page will be automatically reload in 5 seconds
+</body>
+
 </html>
