--- a/html/register.html
+++ b/html/register.html
@@ -1,54 +1,58 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>register</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script>
-        function doPost(URL) {
-            PARAMS = {'name' : $("#name").val(), 'password' : $("#password").val()};
-            var temp = document.createElement("form");
-            temp.action = URL;
-            temp.method = "post";
-            temp.style.display = "none";
-            for (var x in PARAMS) {
-                var opt = document.createElement("textarea");
-                opt.name = x;
-                opt.value = PARAMS[x];
-                temp.appendChild(opt);
-            }
-            document.body.appendChild(temp);
-            temp.submit();
-            return temp;
-        }
-    </script>
-  </head>
-  
-  <body>
+
+<head>
+  <title>register</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <script>
+    function doPost(URL) {
+      PARAMS = { 'name': $("#name").val(), 'password': $("#password").val() };
+      var temp = document.createElement("form");
+      temp.action = URL;
+      temp.method = "post";
+      temp.style.display = "none";
+      for (var x in PARAMS) {
+        var opt = document.createElement("textarea");
+        opt.name = x;
+        opt.value = PARAMS[x];
+        temp.appendChild(opt);
+      }
+      document.body.appendChild(temp);
+      temp.submit();
+      return temp;
+    }
+  </script>
+</head>
+
+<body>
+  <div>
+
     <div>
-
-      <div>
-        <p><span style="text-decoration:none;">注册新账号</span></p>
-      </div>
-
-      <div>
-        <p><span style="text-decoration:none;">用户名：</span></p>
-        <input id="name" type="text" value=""/>
-      </div>
-
-      <div>
-        <p><span style="text-decoration:none;">密码：</span></p>
-        <input id="password" type="password" value=""/>
-      </div>
-
-      <div>
-        <p><span style="text-decoration:none;cursor:pointer;color:blue" onclick="doPost('register')">注册账号</span></p>
-      </div>
-
-      <div>
-        <p><span style="text-decoration:none;">已有账户？</span><a class="link"><span style="text-decoration:none;cursor:pointer;color:#0000FF;" onclick="location='login'">点击登陆</span></a><span style="text-decoration:none;"></span></p>
-      </div>
-
+      <p><span style="text-decoration:none;">注册新账号</span></p>
     </div>
-  </body>
+
+    <div>
+      <p><span style="text-decoration:none;">用户名：</span></p>
+      <input id="name" type="text" value="" />
+    </div>
+
+    <div>
+      <p><span style="text-decoration:none;">密码：</span></p>
+      <input id="password" type="password" value="" />
+    </div>
+
+    <div>
+      <p><span style="text-decoration:none;cursor:pointer;color:blue" onclick="doPost('register')">注册账号</span></p>
+    </div>
+
+    <div>
+      <p><span style="text-decoration:none;">已有账户？</span><a class="link"><span
+            style="text-decoration:none;cursor:pointer;color:#0000FF;" onclick="location='login'">点击登陆</span></a><span
+          style="text-decoration:none;"></span></p>
+    </div>
+
+  </div>
+</body>
+
 </html>
