--- a/html/roomlist.html
+++ b/html/roomlist.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>roomlist</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script>
-      function doPost(URL) {
-        PARAMS = {'name' : $("#name").val(),
-                  'password' : $("#password").val(),
-                  'roomname' : $("#roomname").val()};
-        var temp = document.createElement("form");
-        temp.action = URL;
-        temp.method = "post";
-        temp.style.display = "none";
-        for (var x in PARAMS) {
-          var opt = document.createElement("textarea");
-          opt.name = x;
-          opt.value = PARAMS[x];
-          temp.appendChild(opt);
-        }
-        document.body.appendChild(temp);
-        temp.submit();
-        return temp;
+
+<head>
+  <title>roomlist</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <script>
+    function doPost(URL) {
+      PARAMS = {
+        'name': $("#name").val(),
+        'password': $("#password").val(),
+        'roomname': $("#roomname").val()
+      };
+      var temp = document.createElement("form");
+      temp.action = URL;
+      temp.method = "post";
+      temp.style.display = "none";
+      for (var x in PARAMS) {
+        var opt = document.createElement("textarea");
+        opt.name = x;
+        opt.value = PARAMS[x];
+        temp.appendChild(opt);
       }
-    </script>
-  </head>
+      document.body.appendChild(temp);
+      temp.submit();
+      return temp;
+    }
+  </script>
+</head>
 
-  <body>
-    <input type="hidden" value="%s" id="name"/>
-    <input type="hidden" value="%s" id="password"/>
-    roomlist: 
-    %s
-    <div>
-      创建新房间
-    </div>
-    
-    <div>
-      <p><span style="text-decoration:none;">房间名</span></p>
-      <input id="roomname" type="" value=""/>
-    </div>
+<body>
+  <input type="hidden" value="%s" id="name" />
+  <input type="hidden" value="%s" id="password" />
+  roomlist:
+  %s
+  <div>
+    创建新房间
+  </div>
 
-    <div>
-      <p><span style="text-decoration:none;cursor:pointer;color:blue" onclick="doPost('create')">创建</span></p>
-    </div>
+  <div>
+    <p><span style="text-decoration:none;">房间名</span></p>
+    <input id="roomname" type="" value="" />
+  </div>
 
-  </body>
+  <div>
+    <p><span style="text-decoration:none;cursor:pointer;color:blue" onclick="doPost('create')">创建</span></p>
+  </div>
+
+</body>
+
 </html>
